@@ -54,33 +54,6 @@ Our scripts depend on various programs and modules to run. Refer to the paper fo
 #### R
 - R: https://www.r-project.org/
 
-*****************
-- Install the following packages:
-	- ``
-R
-	+ modules
-	?? gebruik ik dit script? ./Biological_correlations_PSR/basic_statistics_of_data/aa_freqs/analyze_aa_freqs.r:require(lattice)
-library("Biostrings")
-library("biomaRt")
-library("ggplot2")
-library("phangorn")
-library("session")
-library(GenomicRanges)
-library(MASS)
-library(data.table)
-library(dplyr)
-library(ggplot2)
-library(gplots)
-library(gridExtra)
-library(jsonlite)
-library(parallel)
-library(plotrix)
-library(rtracklayer)
-library(scales)
-library(vioplot)
-*****************
-
-
 #### Command line tools
 GNU Parallel (https://www.gnu.org/software/parallel/)
 
@@ -93,6 +66,9 @@ GNU Parallel (https://www.gnu.org/software/parallel/)
 
 #### PAML
 PAML software package, which includes `codeml` (http://abacus.gene.ucl.ac.uk/software/paml.html)
+
+#### Technical checks
+Make sure you check the `GNU Parallel` logs (`perl parse_parallel_logs.pl all`) to get an indication that steps finished correctly. Though unfortunately not all programs exit with an error message if they fail, so our scripts also extensively check for whether the various steps ran correctly in other ways.
 
 
 ## Steps
@@ -197,10 +173,10 @@ find sequences/prank-codon-masked/ -type f -name "*__cds.prank-codon-guidance-tc
 
 
 ### 4. Evolutionary analyses
-Perform maximum likelihood (ML) dN/dS analysis to infer positive selection of genes and codons. This uses `codeml` from the PAML software package.
+Perform maximum likelihood (ML) dN/dS analysis to infer positive selection of genes and codons, using `codeml` from the PAML software package.
 
 #### 4a. Reference phylogenetic tree
-Construct a single phylogenetic tree with branch lengths for use in the `codeml` analyses of all individual one-to-one ortholog cluster alignments.<br/>
+Construct a single phylogenetic tree with branch lengths for use in the `codeml` analyses of all individual one-to-one ortholog cluster alignments (Step 4b, below).<br/>
 
 1. `perl concatenate_alignments.pl`. Concatenate all 11,096 masked alignments from Step 3 (i.e. the GUIDANCE- and TCS-masked codon-based cDNA alignments) into one large alignment. First make sure individual alignment files are all sorted in the same way (done in Step 3d).
 	
@@ -219,7 +195,7 @@ perl convert_fasta_to_codeml_phylip.pl sequences/concatenated_alignment__9primat
 - Calculate reference tree under the F3X4 codon frequency parameter:
 ```bash
 mkdir codeml_M0_F3X4
-cd codeml_M0_F3X4
+cd codeml_M0_F3X4/
 cp ../Supplementary_data_and_material/Phylogenetic_Trees/Ensembl78__9primates__with_taxon_id__unrooted.tre .
 cp ../Supplementary_data_and_material/Configuration_files_for_PAML_codeml/codeml_M0_F3X4_tree.ctl .
 
@@ -230,7 +206,7 @@ cd ..
 - Calculate reference tree under the F61 codon frequency parameter:
 ```bash
 mkdir codeml_M0_F61
-cd codeml_M0_F61
+cd codeml_M0_F61/
 cp ../Supplementary_data_and_material/Phylogenetic_Trees/Ensembl78__9primates__with_taxon_id__unrooted.tre .
 cp ../Supplementary_data_and_material/Configuration_files_for_PAML_codeml/codeml_M0_F61_tree.ctl .
 
@@ -244,18 +220,24 @@ cd ..
 #### 4b. Inference of positive selection using PAML codeml
 1. Convert individual codon-based cDNA alignments from FASTA to a PHYLIP format that is compatible with PAML codeml. This script (i) checks that sequence names do not contain characters that cannot be handled by codeml, (ii) removes gene identifiers from the sequence IDs to make all `.phy` files compatible with the species names in the phylogenetic tree supplied to codeml, (iii) checks that sequences do not contain stop codons or non-canonical nucleotides, (iv) converts undetermined and masked codons [nN] to the codeml ambiguity character `?`.
 ```bash
-find sequences/prank-codon-masked/ -type f -name "*__cds.prank-codon-guidance-tcs-masked-species-sorted.aln.fa" | parallel --max-procs 4 --nice 10 --joblog parallel_covert-to-phylip-prank-codon-guidance-tcs-masked-species-sorted.log --eta 'perl convert_fasta_to_codeml_phylip.pl {}'
+find sequences/prank-codon-masked/ -type f -name "*__cds.prank-codon-guidance-tcs-masked-species-sorted.aln.fa" | parallel --max-procs 4 --nice 10 --joblog parallel_convert-to-phylip-prank-codon-guidance-tcs-masked-species-sorted.log --eta 'perl convert_fasta_to_codeml_phylip.pl {}'
 ```
 
 2. Run codeml. **NOTE:** *this step takes a lot of computation time.*<br/>
 
-These steps (i) prepare the directory structure, (ii) copy the template codeml .ctl file and the reference phylogenetic tree to the proper directories, (iii) customize the .ctl files for running the analysis on each of the 11,096 alignments, and eventually (iv) run the codeml program (from within `start_codeml_for_single_alignment.pl`).<br/>
+These commands (i) prepare the directory structure, (ii) copy the template codeml .ctl file and the reference phylogenetic tree to the proper directories, (iii) customize the .ctl files for running the analysis on each of the 11,096 alignments, and eventually (iv) run the codeml program (from within `start_codeml_for_single_alignment.pl`).<br/>
 <br/>
-The following code shows how to run the `M7vM8_F61` parameter combination. For the paper, we used four combinations of the following codeml .ctl file parameters: `NSsites = 1 2` or `NSsites = 7 8`; `CodonFreq = 2` or `CodonFreq = 3`.
+The following code shows how to run the `M7vM8_F61` parameter combination. For the paper, we used four combinations of the following codeml .ctl file parameters: `NSsites = 1 2` or `NSsites = 7 8`; `CodonFreq = 2` or `CodonFreq = 3`.<br/>
+
+To run the other three parameter combinations:
+- In the code below, replace `M7vM8_F61` by `M1avM2a_F61`
+- In the code below, replace `M7vM8_F61` by `M7vM8_F3X4` and `codeml_M0_tree__unrooted_tree__F61.tre` by `codeml_M0_tree__unrooted_tree__F3X4.tre`
+- In the code below, replace `M7vM8_F61` by `M1avM2a_F3X4` and `codeml_M0_tree__unrooted_tree__F61.tre` by `codeml_M0_tree__unrooted_tree__F3X4.tre`
+
 ```bash
 mkdir codeml_M7vM8_F61
 cp start_codeml_for_single_alignment.pl codeml_M7vM8_F61/
-cd codeml_M7vM8_F61
+cd codeml_M7vM8_F61/
 cp ../Supplementary_data_and_material/Configuration_files_for_PAML_codeml/codeml_M7vM8_F61__large-scale-analysis__template.ctl .
 cp ../Supplementary_data_and_material/Phylogenetic_Trees/codeml_M0_tree__unrooted_tree__F61.tre .
 
@@ -263,82 +245,43 @@ find ../sequences/prank-codon-masked/ -type f -name "*__cds.prank-codon-guidance
 cd ..
 ```
 
-To run the other three parameter combinations:
-- In the code above, replace `M7vM8_F61` by `M1avM2a_F61`
-- In the code above, replace `M7vM8_F61` by `M7vM8_F3X4` and `codeml_M0_tree__unrooted_tree__F61.tre` by `codeml_M0_tree__unrooted_tree__F3X4.tre`
-- In the code above, replace `M7vM8_F61` by `M1avM2a_F3X4` and `codeml_M0_tree__unrooted_tree__F61.tre` by `codeml_M0_tree__unrooted_tree__F3X4.tre`
 
-
-
-
-
-**********************
-3. XXXXXXXXX
-PARSE and gather codeml resutls
-**********************
-!!!!!!!
-dir structure: codeml_M7vM8_F61
-ipv (previously)
-M7vM8_F61
-**********************
+#### 4c. Gather and parse the codeml results
+1. `process_single_run_codeml_results.pl` processess the results for the individual analyses: (i) extensive checks to see if codeml ran correctly, (ii) copies relevant result files, (iii) parses the relevant results from the various mysterious `codeml` output files, (iv) combines everything into results tables.
 ```bash
+cd codeml_M7vM8_F61/
+mkdir codeml_results_parsed
+find codeml_results/ -type d | grep ENSG | parallel --max-procs 4 --joblog parallel_parse_codeml_results__M7vM8_F61.log 'perl ../process_single_run_codeml_results.pl {}' &> parallel_parse_codeml_results__M7vM8_F61.output
 ```
 
-
-In the first of two steps for inferring positive selection using codeml, the 11,096 filtered and masked alignments were subjected to ML analysis under evolutionary models that limit dN/dS to range from 0 to 1 (‘neutral’ model) and under models that allow dN/dS > 1 (‘selection’ model; Text S1)(19). Genes were inferred to have evolved under positive selection if the likelihood ratio test (LRT) indicates that the selection model provides a significantly better fit to the data than does the neutral model (PLRT < 0.05, after Benjamini Hochberg correction for testing 11,096 genes). We included apparent Positively Selected Genes (aPSG) if they met the LRT significance criteria under all four tested ML parameter combinations. 
-Second, for the significant aPSG we retrieved from the site-specific codeml ML analyses (step one, above) the Bayesian posterior probabilities, which indicate the individual codons that may have evolved under positive selection (Text S1)(39). We included apparent Positively Selected Residues (aPSR) if their codons were assigned high posteriors under all four ML parameter combinations (Pposterior (ω > 1)   > 0.99). 416 aPSG contain at least one significant aPSR (1405 in total; Figure S2B).
-
-
-
-
-###5????
-
-Quality control
-We subjected each inferred aPSR and aPSG to visual inspection (Table S3). In this way we identified several indicators for positive selection artefacts that we then used for their automated detection in the complete set. First, we obtained the gene trees for our individual masked alignments using RAxML (38)(-f a -m GTRGAMMAI -N 100). Type-I [orthology] and -II [transcript definitions] artefacts tend to lead to gene trees with (i) a long-branched clade consisting of the set of sequences that are distinct from the others (e.g. paralogs, alternative exons), and (ii) a topology that is not congruent with the well-supported species phylogeny (Figure S3). We filtered out likely false positives by selecting gene trees with an extreme longest/average branch length ratio. Second, to assess the distribution of PSR across exons, we mapped Ensembl exon coordinates for human transcripts to the human protein sequences. Type-II [transcript definitions] and -III [termini] artefacts could often be filtered out by a high concentration of aPSR located to a single exon (Supplementary Files).
-
-
-
-
-GC-biased gene conversion (gBGC)
-The effects of gBGC seem specifically correlated to regions of high meiotic recombination in males rather than females (40). We calculated genomic overlaps of PSG and non-PSG with male (8.2% of PSG, 7.7% of non-PSG) and female (6.7% of PSG, 8.1% of non-PSG) recombination hotspots in human, which we obtained from the family-based deCODE maps (41) via the UCSC genome browser (42). Sex-averaged recombination hotspots estimated from linkage disequilibrium patterns were obtained from HapMap Release 22 (43)(43% of PSG, 39% of non-PSG). Human genomic regions under the influence of gBGC were predicted by phastBias (44)(9.1% of PSG, 11.4% of non-PSG).
-
-
-
-Some useful commands to monitor progress:
-```
-XX
-```
-find sequences/cds/ | grep prank | wc -l
-tail -f parallel_guidance-prank-codon.log
-find sequences/guidance-prank-codon/ -type f | grep PRANK.std$ | xargs cat | grep Writing -A 1
-
-
-
-
-
-
-
-*****
-View alignments and annotations
+2. The results of the individual analyses are then collected into two big tables, one for the alignment level results and one for the residue level results:
 ```bash
-Java	-Djava.ext.dirs=/Applications/Jalview/lib/
-	-cp /Applications/Jalview/jalview.jar jalview.b.Jalview
-	-open <ENSEMBL_ID>__cds.prank-codon-guidance-tcs-masked-species-sorted.aln.translated.fa
+find codeml_results_parsed/ -name "*residues_codeml_results" | sort | xargs cat > M7vM8_F61.residues_codeml_results
+find codeml_results_parsed/ -name "*alignment_codeml_results" | sort | xargs cat > M7vM8_F61.alignment_codeml_results
+cd ..
 ```
-*****
-Jalview annotation files contain annotations for the positively selected residues (PSR), as well as exon coordinates mapped to protein sequences. They can be loaded together with the correct corresponding alignment using (on Mac):
+
+Again, to run the other three parameter combinations:
+- In this Step 4c code, replace `M7vM8_F61` by `M1avM2a_F61`
+- In this Step 4c code, replace `M7vM8_F61` by `M7vM8_F3X4`
+- In this Step 4c code, replace `M7vM8_F61` by `M1avM2a_F3X4`
+
+
+#### 4d. Statistical analysis and intersection of the different parameters combinations
+Combines the results of the different parameter combination runs to select alignments and residues that fulfill our stringent confidence criteria and are thus inferred to have evolved under positive selection. These critera are the following (refer to the paper for more details):<br/>
+- The likelihood ratio test (LRT) indicates that the selection model provides a significantly better fit to the data than does the neutral model (P < 0.05, after Benjamini Hochberg correction for testing 11,096 genes). We included apparent Positively Selected Genes (aPSG) if they met the LRT significance criteria under all four tested ML parameter combinations.
+- We included apparent Positively Selected Residues (aPSR) if their codons were assigned high Bayesian (BEB) posteriors under all four ML parameter combinations (Pposterior (ω > 1) > 0.99).
+
+1. Collect the base result files from the previous step.
 ```bash
-Java	-Djava.ext.dirs=/Applications/Jalview/lib/
-	-cp /Applications/Jalview/jalview.jar jalview.b.Jalview
-	-open <ENSEMBL_ID>__cds.prank-codon-guidance-tcs-masked-species-sorted.aln.translated.fa
-	-annotations <ENSEMBL_ID>.jalview_aln_feature
-	-features <ENSEMBL_ID>.jalview_seq_feature
+mkdir codeml_results_combined
+mkdir codeml_results_combined/codeml_results_base_files
+find . -name "M*_codeml_results" | parallel 'cp {} codeml_results_combined/codeml_results_base_files'
 ```
 
+2. `analyze_and_combine_codeml_results.r`. Combines base result files, performs P value and multiple testing calculations, and selects the final set of alignments and residues fulfilling the criteria.
 
 
-
-
-
-
+### 5. Quality control and curation
+To assess the reliability of our procedure we performed systematic manual inspection of all aPSR and aPSG. Details are described in the paper. Alignment visualization is described in the [Supplementary data and material](Supplementary_data_and_material): [Visualization_and_quality_control_of_alignments_and_positive_selection_profiles](Supplementary_data_and_material/Visualization_and_quality_control_of_alignments_and_positive_selection_profiles/)
 
